--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -3,10 +3,10 @@
         <p class="text-center">{{ prevAnswered.length }} of {{ quizzes.length }}</p>
         <h1>{{ quizzes[currentQuiz].question }}</h1>
 
-  <div class="answers">
-    <ul class="answers__list" *ngFor="let quiz of quizzes[currentQuiz].answer">
-        <label><li class="answers__item" appBackground [correctAnswer]="quiz.correct">
-            <input type="radio" name="options" (change)="onAnswer(quiz.correct)" [disabled]="answerSelected">
+  <div class="answers" >
+    <ul class="answers__list" *ngFor="let quiz of quizzes[currentQuiz].answer" >
+        <label><li @answer class="answers__item" appBackground [correctAnswer]="quiz.correct">
+            <input  type="radio" name="options" (change)="onAnswer(quiz.correct)" [disabled]="answerSelected">
             {{ quiz.option }}
         </li></label>
       </ul>
